fix: alignment on desktop, Added: javascript for icon rotation

--- a/style.css
+++ b/style.css
@@ -25,10 +25,23 @@
 body {
     font-family: 'Kumbh Sans', sans-serif;
     background-image: linear-gradient(var(--Soft-violet), var(--Soft-blue));
+    line-height: 1.5;
+}
+
+main {
+    padding: 15rem 2.4rem;
 }
 
 p {
     font-size: 14px;
+}
+
+.rotated {
+    transform: rotate(180deg);
+}
+
+.active {
+        transform: rotate(180deg);
 }
 
 details {
@@ -38,8 +51,6 @@ details {
     width: 100%;
     font-size: 14px;
     color: var(--Dark-grayish-blue);
-
-    /* Divider */
     border-bottom: 1px solid var(--Lightgrayishblue);
 }
 
@@ -72,13 +83,6 @@ summary:hover {
     gap:5px;
 }
 
-/* Add Active with js */
-
-/* .summary-row img {
-    transform: rotate(180deg);
-    transition: transform 0.4s ease-in-out;
-} */
-
 .card-container {
     display: flex;
     flex-direction: column;
@@ -93,12 +97,6 @@ summary:hover {
     width:375px;
     border-radius:20px;
     box-shadow:0 2rem 4rem hsl(0 0% 0% / 0.25);
-}
-
-@media (max-width: 375px) {
-    .card {
-        width:unset;
-    }
 }
 
 .card-content {
@@ -124,33 +122,44 @@ summary:hover {
 
 /* Desktop styles */
 
-@media (min-width: 678px) {
+@media (min-width: 800px) {
     .card {
         display: flex;
-        padding: 50px;
         flex-direction: row;
         align-items: center;
         justify-content: space-between;
-        width: auto;
-        max-width: 1200px;
-        overflow:hidden;
+        width: 100%;
+        max-width: 56rem;
+        min-height: 520px;
+        position: relative;
+    }
+
+    .card-image-wrapper {
+        overflow: hidden;
+        height: 100%;
+        width: 50%;
     }
 
     .card-img {
-        position:static;
         display: flex;
         justify-content: center;
+        overflow:hidden;
+        width: 100%;
+        height: 100%;
         align-items: center;
-        width:300px;
+        margin-left: -5rem;
+        background-image: url(../images/bg-pattern-desktop.svg);
+        background-repeat: no-repeat;
+        background-position: right bottom 32.5%;
 
     }
 
     .card-img img {
         position:static;
-        width:100%;
         top:unset;
-        margin-left: -150px;
-        width:400px;
+        filter: none;
+        display: block;
+        width: 100%;
     }
 
     .heading {
@@ -158,10 +167,28 @@ summary:hover {
     }
 
     .card-content {
-        padding: 0 0 0 40px;
+        padding: 50px 80px 50px 10px;
+        width: 50%;
     }
     
     .heading {
         margin-top: 0;
     }
+
+    .summary-row {
+        width: 100%;
+    }
+
+    .card::before {
+        position: absolute;
+        width: 19rem;
+        height: 100%;
+        background-image: url(./images/illustration-box-desktop.svg);
+        background-repeat: no-repeat;
+        background-position: left bottom 35%;
+        margin-left: -6rem; 
+        z-index: 10;
+        content: "";
+    }
+
 }
